--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "branch-alias": {
             "dev-master": "2.1-dev"
         },
-        "bolt-web-dir": "./"
+        "bolt-web-dir": "./",
+        "bolt-app-dir": "./app"
     }
     
     
